--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "preview": "vite preview"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
@@ -19,7 +20,7 @@
         "@vitejs/plugin-vue": "^5.2.3",
         "bootstrap": "^5.3.5",
         "vue": "^3.5.13",
-        "vue-i18n": "^12.0.0-alpha.2",
+        "vue-i18n": "^9.14.4",
         "vue-router": "^4.5.0"
     }
 }
