--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@fortawesome/fontawesome-free": "^6.7.2",
         "@vitejs/plugin-vue": "^5.2.3",
         "bootstrap": "^5.3.5",
+        "flag-icons": "^7.3.2",
         "vue": "^3.5.13",
         "vue-i18n": "^9.14.4",
         "vue-router": "^4.5.0"
